monero_libwallet2_api_c/src/main/cpp/wallet2_api_c.h

//     virtual bool coinbase() const = 0;
extern ADDAPI bool MONERO_CoinsInfo_coinbase(void* coinsInfo_ptr);
//     virtual std::string description() const = 0;
extern ADDAPI const char* MONERO_CoinsInfo_description(void* coinsInfo_ptr);
// };
// struct Coins
// {
//     virtual ~Coins() = 0;
//     virtual int count() const = 0;
extern ADDAPI int MONERO_Coins_count(void* coins_ptr);
//     virtual CoinsInfo * coin(int index)  const = 0;
extern ADDAPI void* MONERO_Coins_coin(void* coins_ptr, int index);
//     virtual std::vector<CoinsInfo*> getAll() const = 0;
extern ADDAPI int MONERO_Coins_getAll_size(void* coins_ptr);
extern ADDAPI void* MONERO_Coins_getAll_byIndex(void* coins_ptr, int index);
//     virtual void refresh() = 0;
extern ADDAPI void MONERO_Coins_refresh(void* coins_ptr);
//     virtual void setFrozen(std::string public_key) = 0;
extern ADDAPI void MONERO_Coins_setFrozenByPublicKey(void* coins_ptr, const char* public_key);
//     virtual void setFrozen(int index) = 0;
extern ADDAPI void MONERO_Coins_setFrozen(void* coins_ptr, int index);
//     virtual void thaw(int index) = 0;
extern ADDAPI void MONERO_Coins_thaw(void* coins_ptr, int index);
//     virtual void thaw(std::string public_key) = 0;
extern ADDAPI void MONERO_Coins_thawByPublicKey(void* coins_ptr, const char* public_key);
//     virtual bool isTransferUnlocked(uint64_t unlockTime, uint64_t blockHeight) = 0;
extern ADDAPI bool MONERO_Coins_isTransferUnlocked(void* coins_ptr, uint64_t unlockTime, uint64_t blockHeight);
//    virtual void setDescription(const std::string &public_key, const std::string &description) = 0;
extern ADDAPI void MONERO_Coins_setDescription(void* coins_ptr, const char* public_key, const char* description);
// };
// struct SubaddressRow {
// public:
//     SubaddressRow(std::size_t _rowId, const std::string &_address, const std::string &_label):
//         m_rowId(_rowId),
//         m_address(_address),
//         m_label(_label) {}
 
// private:
//     std::size_t m_rowId;
//     std::string m_address;
//     std::string m_label;
// public:
//     std::string extra;
extern ADDAPI const char* MONERO_SubaddressRow_extra(void* subaddressRow_ptr);
//     std::string getAddress() const {return m_address;}
extern ADDAPI const char* MONERO_SubaddressRow_getAddress(void* subaddressRow_ptr);
//     std::string getLabel() const {return m_label;}
extern ADDAPI const char* MONERO_SubaddressRow_getLabel(void* subaddressRow_ptr);
//     std::size_t getRowId() const {return m_rowId;}
extern ADDAPI size_t MONERO_SubaddressRow_getRowId(void* subaddressRow_ptr);
// };

// struct Subaddress
// {
//     virtual ~Subaddress() = 0;
//     virtual std::vector<SubaddressRow*> getAll() const = 0;
extern ADDAPI int MONERO_Subaddress_getAll_size(void* subaddress_ptr);
extern ADDAPI void* MONERO_Subaddress_getAll_byIndex(void* subaddress_ptr, int index);
//     virtual void addRow(uint32_t accountIndex, const std::string &label) = 0;
extern ADDAPI void MONERO_Subaddress_addRow(void* subaddress_ptr, uint32_t accountIndex, const char* label);
//     virtual void setLabel(uint32_t accountIndex, uint32_t addressIndex, const std::string &label) = 0;
extern ADDAPI void MONERO_Subaddress_setLabel(void* subaddress_ptr, uint32_t accountIndex, uint32_t addressIndex, const char* label);
//     virtual void refresh(uint32_t accountIndex) = 0;
extern ADDAPI void MONERO_Subaddress_refresh(void* subaddress_ptr, uint32_t accountIndex);
// };

// struct SubaddressAccountRow {
// public:
//     SubaddressAccountRow(std::size_t _rowId, const std::string &_address, const std::string &_label, const std::string &_balance, const std::string &_unlockedBalance):
//         m_rowId(_rowId),
//         m_address(_address),
//         m_label(_label),
//         m_balance(_balance),
//         m_unlockedBalance(_unlockedBalance) {}

// private:
//     std::size_t m_rowId;
//     std::string m_address;
//     std::string m_label;
//     std::string m_balance;
//     std::string m_unlockedBalance;
// public:
//     std::string extra;
extern ADDAPI const char* MONERO_SubaddressAccountRow_extra(void* subaddressAccountRow_ptr);
extern ADDAPI void MONERO_Wallet_setLedgerCallback(void (*sendToLedgerDevice)(unsigned char *command, unsigned int cmd_len));